src/main/java/com/example/springboot3jwtauthentication/error/PostNotFoundException.java
package com.example.springboot3jwtauthentication.error;

public class PostNotFoundException extends RuntimeException {

    public PostNotFoundException(String message) {
        super(message);
    }
}
